Fixed many core layout issues

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -7,7 +7,7 @@ body {
 }
 
 .App {
-    width: 100%;
+    width: 100vw;
     height: 100vh;
 
     color: lightgrey;
