--- a/src/app/golden-sun/index.scss
+++ b/src/app/golden-sun/index.scss
@@ -1,4 +1,9 @@
 .golden-sun {
+    position: relative;
+    width: 90%;
+    height: 90%;
+    border: 8px dashed gold;
+
     button {
         outline: none;
         align-items: center;
